# agentic-3d-modeling

./: .gitignore  README.md  pyproject.toml
components/: catalog.json  libraries.lock.json
docs/: agentic_cad_stack.md  agentic_loop.md  design_journey.md  sliding_fit_calibration.md  snapfit_design_notes.md  validation_pipeline.md
models/: calculated_cantilever_latch.scad  ikea_canvas_frame_clip.scad  india_austria_dovetail_cube.scad  india_austria_threaded_cube.scad  jointscad_dovetail_coupon.scad  library_cantilever_clip.scad  parametric_sd_travel_wallet.scad  skadis_micro_cassette.scad  skadis_sliding_box_preview.scad  snapfit_binder_page.scad  snapfit_pair.scad
notebooks/: project_template.ipynb
notes/: 001_snapfit_test_log.md  002_binder_page_test_log.md  003_calculated_latch_test_log.md  004_library_clip_test_log.md
profiles/: elegoo_cc2_pla.json
scripts/: check-collision-mesh.py  check-stl.py  export-binder-page.ps1  export-calculated-latch.ps1  export-color-3mf.py  export-ikea-canvas-clips.ps1  export-india-austria-cube.ps1  export-jointscad-dovetail.ps1  export-library-clip.ps1  export-openscad.ps1  export-sd-travel-wallet.ps1  export-skadis-micro-cassette.ps1  export-skadis-seat-stl.py  export-skadis-sliding-box.ps1  freecad_smoke.py  freecad_validate_step.py  install-cad-libraries.ps1  run-python-cad.ps1  summarize-cassette-run.py  summarize-cube-run.py  summarize-ikea-canvas-clips.py  summarize-sd-wallet-run.py  summarize-threaded-cube-run.py
tests/: test_catalog.py  test_integrity.py  test_journey.py  test_pipeline.py  test_render.py  (+4 more)
(+64 files in other folders)
